--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -2,7 +2,7 @@
 services:
     php:
         build:
-            context: .
+            context: ./
             target: frankenphp_dev
         volumes:
             - ./:/app
@@ -22,6 +22,13 @@ services:
             # Ensure that host.docker.internal is correctly defined on Linux
             - host.docker.internal:host-gateway
         tty: true
+        depends_on:
+            mariadb:
+                condition: service_healthy
+        networks:
+            - appnet
+
+    typescript:
         networks:
             - appnet
     
@@ -33,8 +40,8 @@ services:
             MYSQL_DATABASE: app
             MYSQL_USER: user
             MYSQL_PASSWORD: pass
-        healthcheck: 
-            test: ["CMD-SHELL", "bash -c 'echo > /dev/tcp/127.0.0.1/3306'"]
+        healthcheck:
+            test: [ "CMD-SHELL", "bash -c 'echo > /dev/tcp/127.0.0.1/3306'" ]
             interval: 10s
             timeout: 5s
             retries: 5
