--- a/compose.yaml
+++ b/compose.yaml
@@ -34,6 +34,18 @@ services:
             -   target: 443
                 published: ${HTTP3_PORT:-443}
                 protocol: udp
+
+    typescript:
+        build:
+            context: typescript
+            dockerfile: Dockerfile
+        volumes:
+            - ./typescript:/app
+        working_dir: /app
+        ports:
+            -   target: 3000
+                published: ${NODE_PORT:-3000}
+                protocol: tcp
     
     # Mercure is installed as a Caddy module, prevent the Flex recipe from installing another service
     ###> symfony/mercure-bundle ###
