--- a/composer.json
+++ b/composer.json
@@ -94,6 +94,8 @@
         "phpro/grumphp": "^2.13",
         "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^12.2",
+        "symfony/browser-kit": "7.3.*",
+        "symfony/css-selector": "7.3.*",
         "symfony/maker-bundle": "^1.63"
     }
 }
