First step, add connection and archi typeScript(lake test and eslint typeScript)
Concerne #000000

--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -52,6 +52,7 @@ services:
                 protocol: tcp
         volumes:
             - mariadb_data:/var/lib/mysql
+            - .docker/sql/init.sql:/docker-entrypoint-initdb.d/init.sql
         networks:
             - appnet
 
