--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ DATABASE_URL=mysql://user:pass@mariadb:3306/app?serverVersion=11&charset=utf8mb4
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='^https?://([a-z0-9-]+\.)*localhost(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
