--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,11 +14,11 @@ security:
             security: false
         
         login:
-            pattern: ^/api/login
+            pattern: ^/api/login$
             stateless: true
             json_login:
-                check_path: /api/login_check
-                username_path: email
+                check_path: /api/login
+                username_path: username
                 password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
