--- a/typescript/.eslintrc.json
+++ b/typescript/.eslintrc.json
@@ -1,21 +1,18 @@
 {
-    "parser": "@typescript-eslint/parser",
-    "plugins": [
-        "@typescript-eslint",
-        "react"
-    ],
+    "root": true,
     "extends": [
-        "eslint:recommended",
+        "react-app",
+        "react-app/jest",
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
-        "react-app"
+        "prettier"
     ],
-    "settings": {
-        "react": {
-            "version": "detect"
-        }
-    },
     "rules": {
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "no-console": "warn",
+        "no-debugger": "warn",
+        "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+        "@typescript-eslint/no-explicit-any": "warn",
+        "react-hooks/exhaustive-deps": "warn"
     }
 }
