--- a/typescript/package.json
+++ b/typescript/package.json
@@ -23,13 +23,9 @@
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
         "eject": "react-scripts eject",
-        "lint": "eslint . --ext .ts,.tsx --fix"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
+        "lint": "eslint . --ext .ts,.tsx --fix",
+        "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json}\"",
+        "check-format": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json}\""
     },
     "jest": {
         "moduleNameMapper": {
@@ -62,9 +58,11 @@
         "@eslint/js": "^9.29.0",
         "customize-cra": "^1.0.0",
         "eslint": "^8.57.1",
+        "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-react": "^7.37.5",
         "globals": "^16.2.0",
-        "prettier": "^3.5.3",
+        "prettier": "^3.6.1",
+        "prettier-plugin-organize-imports": "^4.1.0",
         "react-app-rewired": "^2.2.1",
         "typescript": "4.9.5",
         "typescript-eslint": "^8.34.1"
