Add Xdebug and start multi-auth
Concerne #000000

--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@ HTTPS_PORT=8043
 HTTP3_PORT=8044
 NODE_PORT=3000
 
+XDEBUG_MODE=debug
+
 ###> Docker BDD Dev ###
 MARIADB_PORT=3037
 POSTGRE_PORT=
@@ -20,6 +22,7 @@ ADMIN_PASSWORD=123ADMIN321
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=
+AUTH_MODE=bdd
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
