--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -8,6 +8,7 @@ security:
             entity:
                 class: App\Entity\User
                 property: username
+                
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -16,12 +17,7 @@ security:
         login:
             pattern: ^/api/login$
             stateless: true
-            json_login:
-                check_path: /api/login
-                username_path: username
-                password_path: password
-                success_handler: lexik_jwt_authentication.handler.authentication_success
-                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+            custom_authenticator: App\Security\DispatchingAuthenticator
 
         api:
             pattern: ^/api
