--- a/composer.json
+++ b/composer.json
@@ -96,6 +96,7 @@
         "phpunit/phpunit": "^12.2",
         "symfony/browser-kit": "7.3.*",
         "symfony/css-selector": "7.3.*",
-        "symfony/maker-bundle": "^1.63"
+        "symfony/maker-bundle": "^1.63",
+        "symfony/web-profiler-bundle": "7.3.*"
     }
 }
