--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,7 @@
 parameters:
     admin.username: '%env(ADMIN_USERNAME)%'
     admin.password: '%env(ADMIN_PASSWORD)%'
+    auth_mode: '%env(AUTH_MODE)%'
 
 services:
     # default configuration for services in *this* file
@@ -17,6 +18,7 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
-
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+        
+    App\Security\DispatchingAuthenticator:
+        arguments:
+            $authMode: '%auth_mode%'
