--- a/frankenphp/Caddyfile
+++ b/frankenphp/Caddyfile
@@ -5,12 +5,7 @@
 
 	frankenphp {
 		{$FRANKENPHP_CONFIG}
-
-		worker {
-			file ./public/index.php
-			env APP_RUNTIME Runtime\FrankenPhpSymfony\Runtime
-			{$FRANKENPHP_WORKER_CONFIG}
-		}
+		{$CADDYFILE_WORKER_BLOCK}
 	}
 }
 
