PhpStan and grum commit fix
Concerne #000000

--- a/grumphp.yml
+++ b/grumphp.yml
@@ -29,6 +29,7 @@ grumphp:
             
         # recherche de bugs
         phpstan:
+            memory_limit: 512M
             level: 6
 
         phpunit:
