--- a/typescript/package.json
+++ b/typescript/package.json
@@ -64,6 +64,7 @@
         "prettier": "^3.6.1",
         "prettier-plugin-organize-imports": "^4.1.0",
         "react-app-rewired": "^2.2.1",
+        "sass": "^1.89.2",
         "typescript": "4.9.5",
         "typescript-eslint": "^8.34.1"
     }
