--- a/typescript/.eslintrc.json
+++ b/typescript/.eslintrc.json
@@ -10,9 +10,9 @@
     "rules": {
         "react/react-in-jsx-scope": "off",
         "no-console": "warn",
-        "no-debugger": "warn",
-        "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
-        "@typescript-eslint/no-explicit-any": "warn",
-        "react-hooks/exhaustive-deps": "warn"
+        "no-debugger": "error",
+        "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+        "@typescript-eslint/no-explicit-any": "error",
+        "react-hooks/exhaustive-deps": "error"
     }
 }
