--- a/typescript/package.json
+++ b/typescript/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@tanstack/react-query": "^5.80.10",
+        "@tanstack/react-table": "^8.21.3",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
