--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -31,6 +31,10 @@ services:
     typescript:
         networks:
             - appnet
+
+    redis:
+        networks:
+            - appnet
     
     mariadb:
         image: mariadb:11
