--- a/composer.json
+++ b/composer.json
@@ -92,13 +92,17 @@
         }
     },
     "require-dev": {
+        "codeception/codeception": "^5.3",
+        "codeception/module-asserts": "^3.2",
+        "codeception/module-phpbrowser": "^3.0",
+        "codeception/module-rest": "^3.4",
+        "codeception/module-symfony": "^3.6",
         "doctrine/doctrine-fixtures-bundle": "^4.1",
         "enlightn/security-checker": "^2.0",
         "friendsofphp/php-cs-fixer": "^3.75",
         "friendsoftwig/twigcs": "^6.5",
         "phpro/grumphp": "^2.13",
         "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^12.2",
         "symfony/browser-kit": "7.3.*",
         "symfony/css-selector": "7.3.*",
         "symfony/maker-bundle": "^1.63",
