Add flowbite and upgrade react-rewrite to vite compilation bundle
Concerne #371127

--- a/compose.yaml
+++ b/compose.yaml
@@ -51,7 +51,7 @@ services:
             -   target: 3000
                 published: ${NODE_PORT:-3000}
                 protocol: tcp
-        command: sh -c "npm install && npx react-app-rewired start"
+        command: sh -c "npm install && npm run dev"
     
     # Mercure is installed as a Caddy module, prevent the Flex recipe from installing another service
     ###> symfony/mercure-bundle ###
