--- a/typescript/.prettierrc
+++ b/typescript/.prettierrc
@@ -2,6 +2,5 @@
     "tabWidth": 4,
     "useTabs": false,
     "singleQuote": true,
-    "trailingComma": "es5",
-    "plugins": ["prettier-plugin-organize-imports"]
+    "trailingComma": "es5"
 }
