--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,74 +1,46 @@
 {
-    "name": "app",
-    "version": "0.1.0",
+    "name": "vite",
     "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview",
+        "test": "vitest run",
+        "postinstall": "flowbite-react patch"
+    },
     "dependencies": {
-        "@tanstack/react-query": "^5.80.10",
+        "@tailwindcss/vite": "^4.1.11",
+        "@tanstack/react-query": "^5.82.0",
         "@tanstack/react-table": "^8.21.3",
-        "@testing-library/dom": "^10.4.0",
-        "@testing-library/jest-dom": "^6.6.3",
-        "@testing-library/react": "^16.3.0",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.5.2",
-        "@types/node": "^16.18.126",
-        "@types/react": "^19.1.8",
-        "@types/react-dom": "^19.1.6",
+        "flowbite-react": "^0.11.8",
         "lucide-react": "^0.525.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
-        "react-router-dom": "^7.6.2",
-        "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-        "start": "react-app-rewired start",
-        "build": "react-app-rewired build",
-        "test": "react-app-rewired test",
-        "eject": "react-scripts eject",
-        "lint": "eslint . --ext .ts,.tsx --fix",
-        "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json}\"",
-        "check-format": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json}\""
-    },
-    "jest": {
-        "moduleNameMapper": {
-            "^@components/(.*)$": "<rootDir>/src/components/$1",
-            "^@atoms/(.*)$": "<rootDir>/src/components/atoms/$1",
-            "^@molecules/(.*)$": "<rootDir>/src/components/molecules/$1",
-            "^@organisms/(.*)$": "<rootDir>/src/components/organisms/$1",
-            "^@templates/(.*)$": "<rootDir>/src/components/templates/$1",
-            "^@pages/(.*)$": "<rootDir>/src/components/pages/$1",
-            "^@features/(.*)$": "<rootDir>/src/features/$1",
-            "^@hooks/(.*)$": "<rootDir>/src/hooks/$1",
-            "^@interfaces/(.*)$": "<rootDir>/src/interfaces/$1",
-            "^@routes/(.*)$": "<rootDir>/src/routes/$1",
-            "^@services/(.*)$": "<rootDir>/src/services/$1",
-            "^@assets/(.*)$": "<rootDir>/src/assets/$1"
-        }
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+        "react-router-dom": "^7.6.3",
+        "tailwindcss": "^4.1.11"
     },
     "devDependencies": {
-        "@eslint/js": "^9.29.0",
-        "customize-cra": "^1.0.0",
-        "eslint": "^8.57.1",
-        "eslint-config-prettier": "^10.1.5",
-        "eslint-plugin-react": "^7.37.5",
-        "globals": "^16.2.0",
-        "prettier": "^3.6.1",
-        "prettier-plugin-organize-imports": "^4.1.0",
-        "react-app-rewired": "^2.2.1",
-        "sass": "^1.89.2",
-        "typescript": "4.9.5",
-        "typescript-eslint": "^8.34.1"
+        "@eslint/js": "^9.30.1",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
+        "@types/node": "^24.0.13",
+        "@types/react": "^19.1.8",
+        "@types/react-dom": "^19.1.6",
+        "@types/react-router-dom": "^5.3.3",
+        "@vitejs/plugin-react": "^4.6.0",
+        "eslint": "^9.30.1",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.20",
+        "globals": "^16.3.0",
+        "jsdom": "^26.1.0",
+        "sass-embedded": "^1.89.2",
+        "typescript": "~5.8.3",
+        "typescript-eslint": "^8.35.1",
+        "vite": "^7.0.4",
+        "vitest": "^3.2.4"
     }
 }
