--- a/assets/tsconfig.json
+++ b/assets/tsconfig.json
@@ -27,6 +27,7 @@
         "paths": {
             "@components/*": ["components/*"],
             "@atoms/*": ["components/atoms/*"],
+            "@config/*": ["config/*"],
             "@const/*": ["const/*"],
             "@molecules/*": ["components/molecules/*"],
             "@organisms/*": ["components/organisms/*"],
