Add tabs parameter fiche with fake access and tutos link
Concerne #371123 #371040

--- a/assets/tsconfig.json
+++ b/assets/tsconfig.json
@@ -25,9 +25,10 @@
 
         "baseUrl": "src",
         "paths": {
-            "@components/*": ["components/*"],
             "@atoms/*": ["components/atoms/*"],
+            "@components/*": ["components/*"],
             "@config/*": ["config/*"],
+            "@const/*": ["const/*"],
             "@molecules/*": ["components/molecules/*"],
             "@organisms/*": ["components/organisms/*"],
             "@templates/*": ["components/templates/*"],
