--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "lint": "eslint .",
         "preview": "vite preview",
         "test": "vitest run",
-        "postinstall": "flowbite-react patch"
+        "postinstall": "flowbite-react patch",
+        "buildCss": "flowbite-react build"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.11",
