--- a/.env.dist
+++ b/.env.dist
@@ -27,7 +27,7 @@ AUTH_MODE=bdd
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL=mysql://user:pass@mariadb:3306/app?serverVersion=11&charset=utf8mb4
+DATABASE_URL=mysql://user:pass@mariadb:3306/app?charset=utf8mb4&serverVersion=mariadb-11.8.2
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
