--- a/.env.dist
+++ b/.env.dist
@@ -21,7 +21,7 @@ ADMIN_PASSWORD=123ADMIN321
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
+APP_SECRET=0f26f9b10eb5855af9f27b8ef02d85b7
 AUTH_MODE=bdd
 ###< symfony/framework-bundle ###
 
