--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -55,7 +55,7 @@ services:
                 published: ${MARIADB_PORT:-3306}
                 protocol: tcp
         volumes:
-            - mariadb_data:/var/lib/mysql
+            - ./.docker/mariadb/data/:/var/lib/mysql:rw
             - .docker/sql/init.sql:/docker-entrypoint-initdb.d/init.sql
         networks:
             - appnet
@@ -77,7 +77,7 @@ services:
                 published: ${POSTGRE_PORT:-5432}
                 protocol: tcp
         volumes:
-            - postgres_data:/var/lib/postgresql/data
+            - ./.docker/postgres/data/:/var/lib/postgresql/data:rw
         networks:
             - appnet
 
@@ -89,10 +89,6 @@ services:
                 protocol: tcp
         networks:
             - appnet
-
-volumes:
-    mariadb_data:
-    postgres_data:
 
 ###> symfony/mercure-bundle ###
 ###< symfony/mercure-bundle ###
