--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "friendsofphp/proxy-manager-lts": "^1.0",
         "lexik/jwt-authentication-bundle": "^3.1",
         "nelmio/cors-bundle": "^2.5",
+        "pentatrion/vite-bundle": "*",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
         "runtime/frankenphp-symfony": "*",
@@ -107,7 +108,7 @@
         "phpstan/phpstan": "^2.1",
         "symfony/browser-kit": "7.3.*",
         "symfony/css-selector": "7.3.*",
-        "symfony/maker-bundle": "^1.63",
+        "symfony/maker-bundle": "^1.64",
         "symfony/web-profiler-bundle": "7.3.*"
     }
 }
