--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ phpstan.neon
 /.env
 /.docker/mariadb/
 /.docker/postgres/
+
+###> pentatrion/vite-bundle ###
+/node_modules/
+/public/build/
+###< pentatrion/vite-bundle ###
