--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.35.1",
         "vite": "^7.0.4",
+        "vite-plugin-symfony": "^8.2",
         "vitest": "^3.2.4"
     }
 }
