--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -27,6 +27,10 @@ services:
                 condition: service_healthy
         networks:
             - appnet
+                
+    typescript:
+        networks:
+            - appnet
 
     redis:
         networks:
