--- a/compose.yaml
+++ b/compose.yaml
@@ -18,9 +18,16 @@ services:
             # The two next lines can be removed after initial installation
             SYMFONY_VERSION: ${SYMFONY_VERSION:-}
             STABILITY: ${STABILITY:-stable}
+        healthcheck:
+            test: [ "CMD", "php", "bin/console", "about" ]
+            interval: 5s
+            timeout: 5s
+            retries: 10
+            start_period: 10s
         volumes:
             - caddy_data:/data
             - caddy_config:/config
+            - caddy_certs:/data/caddy
         ports:
             # HTTP
             -   target: 80
@@ -34,10 +41,25 @@ services:
             -   target: 443
                 published: ${HTTP3_PORT:-443}
                 protocol: udp
-            # Vite
+    
+    typescript:
+        image: node:20
+        environment:
+            VITE_SERVER_NAME: ${VITE_SERVER_NAME:-localhost}
+        volumes:
+            - ./assets:/app/assets
+            - ./.flowbite-react:/app/.flowbite-react
+            - ./assets:/app/assets
+            - ./package.json:/app/package.json
+            - ./package-lock.json:/app/package-lock.json
+            - ./vite.config.js:/app/vite.config.js
+            - caddy_certs:/data/caddy
+        working_dir: /app
+        ports:
             -   target: 3000
                 published: ${NODE_PORT:-3000}
                 protocol: tcp
+        command: sh -c "npm install && npm run dev"
                 
     redis:
         image: redis/redis-stack
@@ -54,4 +76,5 @@ services:
 volumes:
     caddy_data:
     caddy_config:
+    caddy_certs:
     redis_data:
