--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -29,6 +29,8 @@ services:
             - appnet
                 
     typescript:
+        volumes:
+            - ./node_modules:/app/node_modules
         networks:
             - appnet
 
