--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /var/
 /vendor/
 /.idea/
+/.vscode/
 ###< symfony/framework-bundle ###
 
 ###> friendsofphp/php-cs-fixer ###
@@ -17,6 +18,7 @@
 ###> phpstan/phpstan ###
 phpstan.neon
 ###< phpstan/phpstan ###
+
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
@@ -34,3 +36,8 @@ phpstan.neon
 /node_modules/
 /public/build/
 ###< pentatrion/vite-bundle ###
+
+###> vite + typescript ###
+/assets/.env
+/assets/node_modules
+###< vite + typescript ###
